# Raytracing

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.yaml  crates.js  diagramm.html  help.html  index.html  log  search-index.js  settings.html  src-files.js  typos.toml
.cargo-husky/hooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml  rust-linux.yml  rust-macos.yml  rust-windows.yml  rustdoc.yml
implementors/bvh/aabb/: trait.Bounded.js
implementors/bvh/bounding_hierarchy/: trait.BHShape.js
implementors/bytemuck/pod/: trait.Pod.js
implementors/bytemuck/zeroable/: trait.Zeroable.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
locales/: app.yml  de.yaml  en.yaml
raytracing/: all.html  fn._rust_i18n_available_locales.html  fn._rust_i18n_lookup_fallback.html  fn._rust_i18n_translate.html  fn.main.html  index.html  sidebar-items.js  static._RUST_I18N_BACKEND.html  static._RUST_I18N_FALLBACK_LOCALE.html  type.Color.html
raytracing/raytracer/: index.html  sidebar-items.js  struct.Hit.html  struct.Ray.html  struct.Raytracer.html
raytracing/raytracer/render/: index.html  struct.Render.html  struct.RenderingThread.html
raytracing/scene/: index.html  sidebar-items.js  struct.Scene.html  struct.WithRelativePath.html  type.Color.html
raytracing/scene/camera/: index.html  sidebar-items.js  struct.Camera.html
raytracing/scene/light/: index.html  sidebar-items.js  struct.Light.html
raytracing/scene/material/: index.html  sidebar-items.js  struct.IlluminationModel.html  struct.Material.html
raytracing/scene/object/: fn.filename.html  fn.load_texture.html  fn.triangulate.html  index.html  sidebar-items.js  struct.Object.html  struct.WithRelativePath.html
raytracing/scene/settings/: index.html  struct.Settings.html
raytracing/scene/skybox/: enum.Skybox.html  index.html  sidebar-items.js
raytracing/scene/triangle/: index.html  struct.Triangle.html
raytracing/scene/yaml/: index.html  sidebar-items.js
raytracing/ui/: constant.RENDER_SIZE.html  enum.RenderSize.html  enum.Tab.html  index.html  sidebar-items.js  struct.App.html
raytracing/ui/preview/: constant.MAX_LIGHTS.html  constant.MAX_OBJECTS.html  fn.compile_program.html  fn.gl_log.html  index.html  macro.gl!.html  macro.gl.html  macro.gl_result!.html  macro.gl_result.html  sidebar-items.js  struct.Preview.html  struct.PreviewRenderer.html  struct.PreviewResources.html  struct.ShaderLight.html  struct.ShaderUniforms.html  struct.VertexCount.html
raytracing/ui/properties/: fn.xyz_drag_value.html  index.html  sidebar-items.js  struct.Properties.html
raytracing/ui/render/: fn.rendering_thread.html  index.html  sidebar-items.js  struct.Render.html  struct.RenderingThread.html  struct.ThreadArgs.html
raytracing/ui/renderresult/: index.html  struct.RenderResult.html
raytracing/ui/status/: index.html  struct.Status.html
raytracing/ui/statusbar/: index.html  sidebar-items.js  struct.StatusBar.html
raytracing/ui/yamlmenu/: index.html  sidebar-items.js  struct.YamlMenu.html
res/: config.yaml  test.blend  test.blend1  test.mtl
res/car_objs/: car.mtl
res/e2e-test/: test_config.yaml
res/test/: 1.mtl  2.mtl  car.mtl  config.yaml  floor.mtl  test.mtl
search.desc/trayracer/: trayracer-desc-0-.js
src/: main.rs  raytracer.rs  ui.rs
src/raytracer/: mod.rs  render.rs
src/raytracing/: main.rs.html  raytracer.rs.html
src/raytracing/raytracer/: mod.rs.html  render.rs.html
src/raytracing/scene/: camera.rs.html  light.rs.html  material.rs.html  mod.rs.html  object.rs.html  settings.rs.html  skybox.rs.html  triangle.rs.html  yaml.rs.html
src/raytracing/ui/: mod.rs.html  preview.rs.html  properties.rs.html  render.rs.html  renderresult.rs.html  status.rs.html  statusbar.rs.html  yamlmenu.rs.html
src/scene/: camera.rs  light.rs  material.rs  mod.rs  object.rs  settings.rs  skybox.rs  triangle.rs  yaml.rs
src/trayracer/: main.rs.html
src/trayracer/raytracer/: mod.rs.html  render.rs.html
src/trayracer/scene/: camera.rs.html  light.rs.html  material.rs.html  mod.rs.html  object.rs.html  settings.rs.html  skybox.rs.html  triangle.rs.html  yaml.rs.html
src/trayracer/ui/: mod.rs.html  properties.rs.html  renderresult.rs.html  statusbar.rs.html  yamlmenu.rs.html
src/ui/: filemanager.rs  line.rs  mod.rs  preview.fragment.glsl  preview.rs  preview.vertex.glsl  preview.wgsl  properties.rs  render.rs  renderresult.rs  status.rs  statusbar.rs  yamlmenu.rs
src/ui/preview/: gpu.rs  mod.rs  shader.wgsl
tests/: test_config.yaml
trait.impl/bvh/aabb/: trait.Bounded.js
trait.impl/bvh/bounding_hierarchy/: trait.BHShape.js
trait.impl/bytemuck/pod/: trait.Pod.js
trait.impl/bytemuck/zeroable/: trait.Zeroable.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  (+1 more)
trayracer/: all.html  fn.main.html  index.html  sidebar-items.js  static._RUST_I18N_BACKEND.html  static._RUST_I18N_FALLBACK_LOCALE.html  static._RUST_I18N_MINIFY_KEY.html  static._RUST_I18N_MINIFY_KEY_LEN.html  static._RUST_I18N_MINIFY_KEY_PREFIX.html  static._RUST_I18N_MINIFY_KEY_THRESH.html
trayracer/raytracer/: index.html  struct.Hit.html  struct.Ray.html  struct.Raytracer.html
trayracer/scene/: index.html  sidebar-items.js  struct.Scene.html  struct.WithRelativePath.html  type.Color.html
trayracer/ui/: enum.Tab.html  index.html  sidebar-items.js  struct.App.html
(+136 files in other folders)
