[package]
name = "trayracer"
version = "1.0.0"
edition = "2021"
description = "A Raytracer written in Rust."
license = "GNU GPLv3"
repository = "https://github.com/bircni/Raytracing"
readme = "README.md"
categories = ["graphics", "raytracer", "rendering", "3d"]
keywords = ["raytracer", "rendering", "3d", "graphics"]
authors = [
    "bircni",
    "Fabus1184",
    "LesKlugi",
    "MarcelQ5",
    "phaman09",
    "GitNether",
    "HermanoGranger",
]

[package.metadata.bundle]
name = "TrayRacer"
identifier = "bircni.TrayRacer"
icon = [
    "res/mac-icons/icon_16x16.png",
    "res/mac-icons/icon_32x32.png",
    "res/mac-icons/icon_128x128.png",
    "res/mac-icons/icon_256x256.png",
    "res/mac-icons/icon_16x16@2x.png",
    "res/mac-icons/icon_32x32@2x.png",
    "res/mac-icons/icon_128x128@2x.png",
]
version = "1.0.0"
resources = ["./../res/mac-icons/icon*.png"]
copyright = "© 2024 Team TrayRacer"
category = "Developer Tool"
short_description = "A Raytracer written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# error handling
anyhow = "1.0.94"

# image loading and saving
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
    "tiff",
    "exr",
] }

# logging
log = "0.4.22"
simplelog = "0.12.2"

# linear algebra
nalgebra = { version = "0.33.2", features = ["glam022"] }
rand = "0.8.5"

# obj file loading
obj = "0.10.2"

# automatic parallelization
rayon = "1.10.0"
bytemuck = { version = "1.20", features = ["derive"] }

# total order for floats
ordered-float = "4.5.0"

# generic serialization / deserialization
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"

# GUI
eframe = { version = "0.29.1", features = [
    "wgpu",
    "accesskit",
    "default_fonts",
    "wayland",
    "x11",
], default-features = false }
egui = { version = "0.29.1", features = ["log", "color-hex"] }
egui-wgpu = { version = "0.29.1" }
egui_file = "0.19.0"
egui_extras = { version = "0.29.1", features = ["svg", "image"] }

# BVH
bvh = "0.10.0"
rust-i18n = "3.1.2"
sys-locale = "0.3.2"

[build-dependencies]
anyhow = "1.0.94"
winresource = "0.1.19"

[profile.dev]
opt-level = 3

[profile.perftest]
inherits = "release"
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
expect_used = { level = "deny", priority = 11 }
